--- a/NewHelpCenter.css
+++ b/NewHelpCenter.css
@@ -2,6 +2,19 @@
     box-sizing: border-box;
 }
 
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
 
 body {
     font-family: arial, Helvetica, sans-serif
