--- a/HelpCenter.css
+++ b/HelpCenter.css
@@ -51,7 +51,7 @@ body {
 }
 
 .dashboard4 {
-    background-color: #f0f2f4;
+    background-color: #e8effc;
     padding-top: 50px;
     padding-bottom: 100px;
     
