--- a/HelpCenter.css
+++ b/HelpCenter.css
@@ -51,7 +51,7 @@ body {
 }
 
 .dashboard4 {
-    background-color: #d1dffa;
+    background-color: #e7f5fe;
     padding-top: 50px;
     padding-bottom: 100px;
     
