--- a/HelpCenter.css
+++ b/HelpCenter.css
@@ -51,7 +51,7 @@ body {
 }
 
 .dashboard4 {
-    background-color: #e7f5fe;
+    background-color: #edf2f7;
     padding-top: 50px;
     padding-bottom: 100px;
     
@@ -65,7 +65,7 @@ body {
 }
 
 .dashboard6 {
-    background-color: #ffede6;
+    background-color: #edf2f7;
     padding-top: 50px;
     padding-bottom: 100px;
     
